feat: init pages and basic style

--- a/src/assets/styles/helpers/variables.scss
+++ b/src/assets/styles/helpers/variables.scss
@@ -8,19 +8,20 @@
     --font-size-s: 0.75rem;
     --font-size-xs: 0.625rem;
 
-    --primary-font-color: #000000;
-    --secondary-font-color: rgb(79, 79, 79);
+    --primary-color: #ffffff;
+    --secondary-color: #f8f8f8;
+    --third-color: #f1f1f1;
+    --fourth-color: #1a1a1a;
+
+    --primary-font-color: #333333;
+    --secondary-font-color: #000000;
     --third-font-color: #ffffff;
-    --fourth-font-color: #a0a0a0;
 
-    --main-color: #e5e5e5;
-    --secondary-color: #000000;
-    --third-color: #ffffff;
+    --placeholder-color: #808080;
 
-    --border-radius: 3px;
+    --border-radius: 10px;
     --gap: 15px;
 
-    --header-color: #ffffff;
     --header-height: 60px;
 
     --breakpoint-mobile: 320px;
