feat: products page

--- a/src/assets/styles/base/base.scss
+++ b/src/assets/styles/base/base.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: var(--fourth-color);
+    background-color: var(--sixth-color);
     font-family: var(--font-primary);
     font-size: var(--font-size-s);
     color: var(--primary-font-color);
