--- a/src/components/UI/Header/index.module.scss
+++ b/src/components/UI/Header/index.module.scss
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    background-color: var(--fourth-color);
+    background-color: var(--sixth-color);
     color: var(--third-font-color);
     height: var(--header-height);
     display: flex;
