--- a/src/app/products/page.module.scss
+++ b/src/app/products/page.module.scss
@@ -1,5 +1,9 @@
 .page {
+    width: 100%;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 
     .title {
         font-size: var(--font-size-m);
@@ -7,10 +11,156 @@
         display: flex;
         align-items: center;
         gap: 10px;
+        margin-bottom: 10px;
         
         img {
             width: 18px;
             height: 18px;
+        }
+    }
+
+    .productsStats {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        background-color: var(--primary-color);
+        border: 1px solid var(--border-color-primary);
+        border-radius: var(--border-radius);
+        padding: 20px;
+        
+        .item {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            gap: 10px;
+            cursor: pointer;
+
+            .label {
+                color: var(--placeholder-color);
+            }
+
+            .value {
+                font-size: var(--font-size-m);
+                font-weight: 600;
+            }
+        }
+    }
+
+    .productsActions {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .productsContainer {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        background-color: var(--primary-color);
+        border: 1px solid var(--border-color-primary);
+        border-radius: var(--border-radius);
+        overflow: hidden;
+
+        .productsHeader {
+            width: 100%;
+            height: 40px;
+            padding: 0 20px;
+            display: grid;
+            grid-template-columns: 20px repeat(4, 1fr);
+            gap: 20px;
+            align-items: center;
+            background-color: var(--secondary-color);
+            border-bottom: 1px solid var(--border-color-primary);
+            font-size: var(--font-size-s);
+            color: var(--text-color-secondary);
+
+            p {
+                display: flex;
+                align-items: center;
+                gap: 6px;
+                cursor: pointer;
+            }
+
+            .sortIcon {
+                width: 10px;
+                height: 10px;
+                display: inline-block;
+            }
+            .sortIconAsc {
+                transform: rotate(-90deg);
+            }
+            .sortIconDesc {
+                transform: rotate(90deg);
+            }
+            .sortIconHidden {
+                visibility: hidden;
+            }
+        }
+
+        .productsList {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+
+            .productItem {
+                width: 100%;
+                height: 40px;
+                padding: 0px 20px;
+                display: grid;
+                grid-template-columns: 20px repeat(4, 1fr);
+                gap: 20px;
+                align-items: center;
+                border-bottom: 1px solid var(--border-color-primary);
+                transition: background-color 0.2s ease;
+
+                &:hover {
+                    background-color: var(--secondary-color);
+                }
+
+                &:last-child {
+                    border-bottom: none;
+                }
+
+                input[type="checkbox"] {
+                    margin: 0;
+                }
+            }
+        }
+
+        .productsFooter {
+            padding: 0px 20px;
+            height: 40px;
+            border-top: 1px solid var(--border-color-primary);
+            background-color: var(--secondary-color);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            .productsFooterPages {
+                display: flex;
+                align-items: center;
+                gap: 5px;
+
+                div {
+                    box-sizing: border-box;
+                    padding: 5px 7px;
+                    border: 1px solid var(--border-color-primary);
+                    border-radius: 7px;
+                    display: flex;
+                    background-color: var(--primary-color);
+                    cursor: pointer;
+
+                    &.unavailable {
+                        background-color: var(--secondary-color);
+                        color: var(--placeholder-color);
+                        cursor: default;
+                    }
+                }
+            }
         }
     }
 }
