--- a/src/assets/styles/helpers/variables.scss
+++ b/src/assets/styles/helpers/variables.scss
@@ -11,15 +11,20 @@
     --primary-color: #ffffff;
     --secondary-color: #f8f8f8;
     --third-color: #f1f1f1;
-    --fourth-color: #1a1a1a;
+    --fourth-color: #e0e0e0;
+    --fifth-color: #333333;
+    --sixth-color: #1a1a1a;
 
     --primary-font-color: #333333;
     --secondary-font-color: #000000;
     --third-font-color: #ffffff;
 
+    --border-color-primary: #e0e0e0;
+
     --placeholder-color: #808080;
 
     --border-radius: 10px;
+    --border-radius-small: 7px;
     --gap: 15px;
 
     --header-height: 60px;
