--- a/src/assets/styles/helpers/variables.scss
+++ b/src/assets/styles/helpers/variables.scss
@@ -20,6 +20,7 @@
     --third-font-color: #ffffff;
 
     --border-color-primary: #e0e0e0;
+    --border-color-secondary: #a7a7a7;
 
     --placeholder-color: #808080;
 
